@@ -1,7 +1,7 @@
 /*
     IIP Response Handler Class
 
-    Copyright (C) 2003-2014 Ruven Pillay.
+    Copyright (C) 2003-2015 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -44,7 +44,7 @@ class IIPResponse{
 
   std::string server;              // Server header
   std::string modified;            // Last modified header
-  std::string cache;               // Cache control header
+  std::string cacheControl;        // Cache control header
   std::string mimeType;            // Mime type header
   std::string eof;                 // End of response delimitter eg "\r\n"
   std::string protocol;            // IIP protocol version
@@ -116,6 +116,15 @@ class IIPResponse{
 
   /// Get CORS setting
   std::string getCORS(){ return cors; };
+
+
+  /// Set Cache-Control value
+  /** @param Cache-Control setting */
+  void setCacheControl( const std::string& c ){ cacheControl = "Cache-Control: " + c; };
+
+
+  /// Get Cache-Control value
+  std::string getCacheControl(){ return cacheControl; };
 
 
   /// Get a formatted string to send back
