@@ -1,6 +1,8 @@
 17/07/2015:
 	- Increased buffer memory for JPEG encoding to handle certain images or tiles that
 	  encode at Q=100 to sizes significantly larger than the raw data.
+	- Added new CACHE_CONTROL server parameter to allow user control over this. If not
+	  set, it defaults to the previous default value of "max-age=86400".
 
 
 19/03/2015:
